[workspace]
resolver = "3"
members = ["crates/rist-core", "crates/rist-codec", "crates/rist"]
# cargo-fuzz harnesses are their own detached workspace (own `[workspace]`),
# excluded here too so `cargo build --workspace --all-targets` never reaches
# them — they need nightly + libFuzzer and live outside the unsafe-free gate.
exclude = ["crates/rist-core/fuzz", "crates/rist-codec/fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Thomas Symborski <thomas.symborski@gmail.com>"]
repository = "https://github.com/zsiec/ristrust"
homepage = "https://github.com/zsiec/ristrust"
keywords = ["rist", "streaming", "video", "networking", "sans-io"]
categories = ["network-programming", "multimedia"]

# Shared dependency versions. Member crates opt in with `<dep>.workspace = true`,
# so versions are pinned in exactly one place.
[workspace.dependencies]
# --- intra-workspace ---
rist-core = { path = "crates/rist-core", version = "0.0.0" }
rist-codec = { path = "crates/rist-codec", version = "0.0.0" }
# --- shared ---
bytes = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", default-features = false }
# Host socket options std/tokio do not expose: multicast group join/leave (ASM +
# source-specific), egress interface/TTL/loopback. Pure Rust over libc bindings,
# no C build; socket2 is the project's intended host-I/O layer (see CLAUDE.md).
socket2 = "0.6"
# Network-interface enumeration, to resolve a multicast `miface` name to its IPv4
# membership address and interface index. Pure Rust over libc bindings.
if-addrs = "0.13"
# --- crypto (RustCrypto, pure Rust; no OpenSSL/aws-lc/ring FFI) ---
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hmac = "0.12"
# `oid` exposes the SHA-256 algorithm OID needed when signing X.509 certificates
# in the DTLS ECDHE-ECDSA path.
sha2 = { version = "0.10", features = ["oid"] }
aes = "0.8"
ctr = "0.9"
# DTLS 1.2 (optional, `--features dtls`): AES-128-GCM AEAD record protection,
# P-256 ECDHE/ECDSA for the ECDHE_ECDSA suite, and X.509 cert gen/parse for its
# certificate handling. Pure RustCrypto, no FFI.
aes-gcm = "0.10"
p256 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa", "pkcs8", "alloc", "pem"] }
rand_core = "0.6"
x509-cert = { version = "0.2", default-features = false, features = ["builder"] }
# OS CSPRNG for the PSK nonce (the only non-determinism in the crypto layer).
getrandom = "0.3"
# SRP-6a (Main-profile EAP auth): big-integer modular exponentiation over the
# 2048-bit RFC 5054 group, and constant-time proof comparison. Pure Rust.
num-bigint = "0.4"
subtle = "2"
# --- dev ---
proptest = "1"

# Deny-by-default lints applied to every crate in the workspace — the backbone of
# "max safety, idiomatic modern Rust". `#![forbid(unsafe_code)]` is also declared
# per-crate so the guarantee is visible at the crate root.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Promote pedantic to a warning; opt out case-by-case with a justified allow.
pedantic = { level = "warn", priority = -1 }
# A few that fire constantly and add little signal for this codebase.
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Domain noise for a protocol library: spec terms (EtherType, NTP-64, MPEG-TS)
# read fine without backticks; the libRIST defaults read clearer in their native
# millisecond units than as seconds; trait-impl and forward-looking async stubs
# carry mandated `&self` / `async` signatures that don't yet use them.
doc_markdown = "allow"
duration_suboptimal_units = "allow"
unused_self = "allow"
unused_async = "allow"

# A faster release profile for benches/interop; keep debug assertions in tests.
[profile.release]
lto = "thin"
