[package]
name = "rist-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Pure RIST profile codecs (RTP/RTCP, GRE, Advanced) and crypto, encoding through the rist-core narrow waist"

[lints]
workspace = true

[dependencies]
# The narrow waist this crate decodes into / encodes from. The dependency arrow
# points one way: codecs depend on the core, never the reverse.
rist-core.workspace = true
# Zero-copy buffers (shared with the core's wire types) and error enums.
bytes.workspace = true
thiserror.workspace = true
# Crypto (RustCrypto, pure Rust). PSK key derivation is PBKDF2-HMAC-SHA256;
# the payload cipher is AES-CTR; the nonce draws from the OS CSPRNG.
pbkdf2.workspace = true
sha2.workspace = true
aes.workspace = true
ctr.workspace = true
getrandom.workspace = true
# SRP-6a big-integer math + constant-time proof comparison (Main-profile EAP).
num-bigint.workspace = true
subtle.workspace = true
# Authenticated Advanced-profile PSK modes (TR-06-3 §8): HMAC-SHA256 (AES-CTR-HMAC,
# mode 3), AES-GCM (mode 4), and ChaCha20-Poly1305 (mode 5). Default deps — the
# Advanced profile can negotiate these in the stock build. (`hmac`/`aes-gcm` are also
# used by the optional DTLS record layer.) Pure RustCrypto, no FFI.
hmac.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
# DTLS 1.2 (optional, `--features dtls`): P-256 ECDHE/ECDSA for the ECDHE_ECDSA
# suite and X.509 cert gen/parse. Pure RustCrypto, no FFI; libRIST has no DTLS.
p256 = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
x509-cert = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }

[features]
# Pure-Rust DTLS 1.2: the full TR-06-2 §6.2 mandatory suite set (ECDHE-ECDSA and
# ECDHE-RSA AES-128/256-GCM, RSA_WITH_NULL_SHA256) plus the PSK suite RIST uses.
# Off by default; not an interop gate (the bar is OpenSSL `s_server`/`s_client
# -dtls1_2`). `hmac`/`aes-gcm` are now default deps (the Advanced AEAD modes use them).
dtls = ["dep:p256", "dep:rand_core", "dep:x509-cert", "dep:rsa"]
