[package]
name = "rist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Tokio I/O host and public Sender/Receiver API for RIST (Reliable Internet Stream Transport, VSF TR-06)"

[lints]
workspace = true

[features]
# The interop test suite (tests/interop.rs) drives the libRIST reference CLI
# tools against ristrust. Off by default; the suite skips gracefully when the
# tools are absent. Run with: `cargo test -p rist --features interop`.
interop = []
# The differential suite (tests/differential.rs) builds and drives the ristgo
# example sender/receiver against ristrust — the same-author Go reference. Needs
# the Go toolchain and the ristgo source (via the RISTGO_DIR env var); skips
# gracefully otherwise. Run with: `cargo test -p rist --features differential`.
differential = []
# Optional DTLS 1.2 host-wiring on the Main profile (sender=client, receiver=server),
# forwarding to the `rist-codec` DTLS codec. Off by default; not an interop gate
# (libRIST has no DTLS). Run with: `cargo test -p rist --features dtls`.
dtls = ["rist-codec/dtls"]

[dependencies]
# The deterministic core (driven by the host) and the profile codecs (run by the
# host's per-profile strategy). The host is the only crate that touches I/O.
rist-core.workspace = true
rist-codec.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["net", "rt", "time", "sync", "macros"] }
# OS CSPRNG for the Main-profile EAP-SRP authenticator's per-session salt.
getrandom.workspace = true
# Multicast group membership/egress socket options and `miface` resolution.
socket2.workspace = true
if-addrs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
